--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Martian Coffee Brew</title>
+  <link rel="stylesheet" href="styles/main.css">
 </head>
-<body>
-</body>
+<div class="container">
+  <body>
+    <header>
+      <h1>Martian Coffee</h1>
+    </header>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Coffee</a></li>
+          <li><a href="#">Gear</a></li>
+        </ul>
+      </nav>
+    <section>
+      <h2>Mars Grown</h2>
+        <p>Grown with the finest martian soil to enhance roasting methods.</p>
+        <p>It has been said that Martian Coffee will make you re-think your reason for staying on Earth.</p>
+    </section>
+    <section>
+      <div class="grid-container">
+        <div class="grid-item"><p><img src="assets/images/Coffe1.jpg" alt="Top Coffee Shot" style="width:200px;height:200px"></p></div>
+        <div class="grid-item"><p><img src="assets/images/Coffe1.jpg" alt="Top Coffee Shot" style="width:200px;height:200px"></p></div>
+        <div class="grid-item"><p><img src="assets/images/Coffe1.jpg" alt="Top Coffee Shot" style="width:200px;height:200px"></p></div>
+        <div class="grid-item"><p><img src="assets/images/Coffe1.jpg" alt="Top Coffee Shot" style="width:200px;height:200px"></p></div>
+        <!--Credit For Top Coffee Shot Photo: https://unsplash.com/photos/-M4x5zUA1GA-->
+      </div>
+    </section>
+    <footer>
+      <p>Created By Cesar &#169;</p>
+    </footer>
+  </body>
+</div>
 </html>
