--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
     </section>
     <footer>
       <p>Created By Cesar &#169;</p>
+      <!--Class Notes 11/11/2020-->
+      <div class="flex-block"> <!--Parent-->
+        <div class="E1">1</div> <!--Child-->
+        <div class="E2">2</div> <!--Child-->
+        <div class="E3">3</div> <!--Child-->
+      </div>
     </footer>
   </body>
 </div>
